--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -5,4 +5,8 @@ h2mem1 = {
 }
 
 # Additional logging for troubleshooting
-akka.loglevel = "DEBUG"
+akka {
+  loglevel = "DEBUG"
+  loggers = ["akka.event.slf4j.Slf4jLogger"]
+  logging-filter = "akka.event.slf4j.Slf4jLoggingFilter"
+}
