--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -1,5 +1,5 @@
 h2mem1 = {
-  url = "jdbc:h2:file:./database/h2/demo1;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
+  url = "jdbc:h2:tcp://0.0.0.0/./database/h2/demo1;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE"
   driver = org.h2.Driver
   keepAliveConnection = true
 }
